--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,25 @@
           <form class="filter-form" action="#" method="get" name="filter-form">
             <fieldset>
               <legend>Стоимость</legend>
-              <div class="price-range"></div>
+              <div class="price-range">
+                <div class="scale">
+                  <div class="range">
+                    <div class="range-knob range-min">
+                      <div>
+                        <p>от <span class="price-min">0</span>
+                        </p>
+                      </div>
+                    </div>
+
+                    <div class="range-knob range-max">
+                      <div>
+                        <p>до <span class="price-max">5000</span>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
             </fieldset>
             <fieldset>
