catalog styling added

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <header class="main-header">
+    <header class="main-header inner-main-header">
       <h2 class="visually-hidden">Основное меню</h2>
       <img class="main-logo" src="img/svg-device/logo-vector.svg" alt="main-logo">
 
@@ -140,14 +140,16 @@
                   <div class="range">
                     <div class="range-knob range-min">
                       <div>
-                        <p>от <span class="price-min">0</span>
+                        <p>от
+                          <span class="price-min">0</span>
                         </p>
                       </div>
                     </div>
 
                     <div class="range-knob range-max">
                       <div>
-                        <p>до <span class="price-max">5000</span>
+                        <p>до
+                          <span class="price-max">5000</span>
                         </p>
                       </div>
                     </div>
@@ -204,7 +206,13 @@
 
         <section class="catalog">
           <ul class="catalog-images">
-            <li class="catalog-item">
+            <li class="catalog-item">              
+              <div class="item-hover">
+                <button class="button item-hover-button">
+                  <div>В корзину</div>
+                </button>
+                <button class="compare-button">Добавить к сравнению</button>
+              </div>
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Любительская селфи-палка</b>
@@ -212,6 +220,12 @@
               </div>
             </li>
             <li class="catalog-item">
+                <div class="item-hover">
+                    <button class="button item-hover-button">
+                      <div>В корзину</div>
+                    </button>
+                    <button class="compare-button">Добавить к сравнению</button>
+                  </div>
               <img src="img/item-2.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Профессиональная
@@ -220,6 +234,12 @@
               </div>
             </li>
             <li class="catalog-item">
+                <div class="item-hover">
+                    <button class="button item-hover-button">
+                      <div>В корзину</div>
+                    </button>
+                    <button class="compare-button">Добавить к сравнению</button>
+                  </div>
               <img src="img/item-3.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Непотопляемая селфи-палка</b>
@@ -227,6 +247,12 @@
               </div>
             </li>
             <li class="catalog-item">
+                <div class="item-hover">
+                    <button class="button item-hover-button">
+                      <div>В корзину</div>
+                    </button>
+                    <button class="compare-button">Добавить к сравнению</button>
+                  </div>
               <img src="img/item-4.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Селфи-палка «Следуй за мной»</b>
