main logo link added

--- a/catalog.html
+++ b/catalog.html
@@ -12,8 +12,10 @@
   <div class="container">
     <header class="main-header inner-main-header">
       <h2 class="visually-hidden">Основное меню</h2>
-      <img class="main-logo" src="img/svg-device/logo-vector.svg" alt="main-logo">
 
+      <a href="index.html">
+        <img class="main-logo" src="img/svg-device/logo-vector.svg" alt="main-logo">
+      </a>
 
       <nav class="user-navigation">
 
@@ -206,7 +208,7 @@
 
         <section class="catalog">
           <ul class="catalog-images">
-            <li class="catalog-item">              
+            <li class="catalog-item">
               <div class="item-hover">
                 <button class="button item-hover-button">
                   <div>В корзину</div>
@@ -220,12 +222,12 @@
               </div>
             </li>
             <li class="catalog-item">
-                <div class="item-hover">
-                    <button class="button item-hover-button">
-                      <div>В корзину</div>
-                    </button>
-                    <button class="compare-button">Добавить к сравнению</button>
-                  </div>
+              <div class="item-hover">
+                <button class="button item-hover-button">
+                  <div>В корзину</div>
+                </button>
+                <button class="compare-button">Добавить к сравнению</button>
+              </div>
               <img src="img/item-2.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Профессиональная
@@ -234,12 +236,12 @@
               </div>
             </li>
             <li class="catalog-item">
-                <div class="item-hover">
-                    <button class="button item-hover-button">
-                      <div>В корзину</div>
-                    </button>
-                    <button class="compare-button">Добавить к сравнению</button>
-                  </div>
+              <div class="item-hover">
+                <button class="button item-hover-button">
+                  <div>В корзину</div>
+                </button>
+                <button class="compare-button">Добавить к сравнению</button>
+              </div>
               <img src="img/item-3.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Непотопляемая селфи-палка</b>
@@ -247,12 +249,12 @@
               </div>
             </li>
             <li class="catalog-item">
-                <div class="item-hover">
-                    <button class="button item-hover-button">
-                      <div>В корзину</div>
-                    </button>
-                    <button class="compare-button">Добавить к сравнению</button>
-                  </div>
+              <div class="item-hover">
+                <button class="button item-hover-button">
+                  <div>В корзину</div>
+                </button>
+                <button class="compare-button">Добавить к сравнению</button>
+              </div>
               <img src="img/item-4.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div>
                 <b>Селфи-палка «Следуй за мной»</b>
