--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Девайс</title>
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -13,7 +14,9 @@
 
     <header class="main-header">
       <h2 class="visually-hidden">Основное меню</h2>
-      <img class="main-logo" src="img/svg-device/logo-vector.svg" alt="main-logo">
+      <a href="index.html">
+        <img class="main-logo" src="img/svg-device/logo-vector.svg" alt="main-logo">
+      </a>
 
       <nav class="user-navigation">
 
@@ -40,7 +43,7 @@
 
       <ul class="services-list">
         <li class="services-item">
-          <a href="#">Каталог товаров
+          <a href="catalog.html">Каталог товаров
           </a>
           <ul class="menu-catalogue-list">
             <li class="menu-catalogue-item">
